# aoc2024

./: .clang-format  .gitignore  CMakeLists.txt  README.md
inputs/: 14.txt
src/: aoc1.cpp  aoc10.cpp  aoc11.cpp  aoc12.cpp  aoc13.cpp  aoc14.cpp  aoc15.cpp  aoc16.cpp  aoc17.cpp  aoc18.cpp  aoc19.cpp  aoc2.cpp  aoc20.cpp  aoc21.cpp  aoc22.cpp  aoc23.cpp  aoc24.cpp  aoc25.cpp  aoc3.cpp  aoc4.cpp  aoc5.cpp  aoc6.cpp  aoc7.cpp  aoc8.cpp  aoc9.cpp
src/lib/: CMakeLists.txt  utils.h  utils.hpp
tests/: 14.txt  5.txt
